# film_vault

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_SYSTEM_GUIDE.md  DEVELOPMENT.md  README.md  ROADMAP.md  TESTING.md  TESTING_v0.2.0.md  init-dev.ps1  next.config.ts  package-lock.json  package.json  start-dev.ps1
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/migrations/: 001_initial.sql  002_settings.sql  003_add_photo_favorite.sql  004_exif_write_tracking.sql  005_settings_exif.sql  006_remove_photo_exif.sql  007_add_photo_city.sql  008_add_roll_location.sql  009_film_presets.sql  010_add_preset_brand.sql  011_remove_iso.sql
src-tauri/presets/: default_presets.json
src-tauri/src/: config.rs  database.rs  default_presets.rs  exif_tool.rs  image_processor.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  exif.rs  film_presets.rs  import.rs  mod.rs  rolls.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: AddPhotosDialog.tsx  BatchSelectionBar.tsx  DeletePhotosDialog.tsx  DeleteRollDialog.tsx  EditMetadataForm.tsx  EmptyState.tsx  ExifInfoPanel.tsx  FilmPresetCard.tsx  FilmPresetForm.tsx  FilmPresetGrid.tsx  FilmStripBadge.tsx  Header.tsx  ImportDialog.tsx  LocationSearchInput.tsx  PhotoGrid.tsx  PhotoGridItem.tsx  PhotoMetadataForm.tsx  PhotoPreviewDialog.tsx  RollCard.tsx  RollDetailHeader.tsx  RollFilters.tsx  SettingsDialog.tsx
(+25 files in other folders)
